# scpi-core

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/scpi_core/: __init__.py  device.py  errors.py  serial_transport.py  transport.py
tests/: test_device.py  test_transport.py
